# codebase-qa-rag

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml  requirements.txt
api/: main.py
api/static/: index.html
benchmark/: README.md  formfit.jsonl  microblog.jsonl
eval/: README.md  judge_validation.csv  validate_judge.py
experiments/: analyze.py  ask.py  run_grid.py  stats.py
experiments/results/: grid_results.csv  grid_runs.jsonl  stats.csv  stats.md  summary.md  summary_by_config.csv
src/coderag/: __init__.py  benchmark.py  config.py  embeddings.py  judge.py  llm.py  loaders.py  metrics.py  pipeline.py  vectorstore.py
src/coderag/chunking/: __init__.py  ast_chunker.py  base.py  component.py  naive.py
src/coderag/retrieval/: __init__.py  base.py  bm25.py  dense.py  hybrid.py
web/: README.md  angular.json  package-lock.json  package.json
web/src/: index.html
web/src/app/: app.ts
